git ignore static content

--- a/nginx/static/50x.html
+++ b/nginx/static/50x.html
@@ -4,7 +4,7 @@
   <title>Error</title>
   </head>
   <body>
-    <h1>An error occurred.</h1>
+    <h1>An Error Occurred</h1>
     <p>Sorry...</p>
   </body>
 </html>
